--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ permalink: /index.html
              </div>
              <div class="col col-info">
                   <h3>Privacy</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                  <p>Firo, formerly Zcoin, has been the gold standard of trustless, on-chain privacy since 2016.</p>
                   <div class="row block-facts">
                       <div class="col">
                          <img src="img/site-icons/icon_anonymous.svg" alt="" />
@@ -53,7 +53,7 @@ permalink: /index.html
           <div class="row privacy">
              <div class="col col-info">
                   <h3>Blockchain</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                  <p>Firo’s incentive infrastructure gives it the industry-leading practical anonymity set.</p>
                   <div class="row block-facts">
                       <div class="col">
                           <img src="img/site-icons/icon_coins.svg" alt="" />
@@ -88,7 +88,7 @@ permalink: /index.html
              </div>
              <div class="col col-info">
                   <h3>Research and development</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                  <p>Firo is one of the few that actually contributes both independent research and development to blockchain privacy and decentralization technologies.</p>
                   <div class="row block-facts">
                       <div class="col">
                          <img src="img/site-icons/icon_sigma.svg" alt="" />
@@ -114,7 +114,7 @@ permalink: /index.html
           <div class="row">
              <div class="col">
                   <h2>get firo</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                  <p>Push the frontiers of digital privacy. Join the Firo ecosystem today.</p>
              </div>
           </div>
           <div class="row btns">
