Update tech page with correct wording

--- a/about/tech/index.html
+++ b/about/tech/index.html
@@ -14,7 +14,7 @@ permalink: /about/tech/index.html
       <section class="container tech-section">
           <div class="row">
               <div class="col">
-                  <p class="intro-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+                  <p class="intro-text">Privacy is about staying one step ahead. The team behind Firo is responsible for some of the most significant blockchain privacy protocols on record, and all that tech is distilled into Firo.</p>
               </div>
           </div>
       </section>
@@ -31,7 +31,7 @@ permalink: /about/tech/index.html
                       <div class="row">
                           <div class="col">
                               <h3>Lelantus Technology</h3>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quam ex, congue et nunc quis, euismod fringilla nunc. Proin nec augue vel turpis fermentum ultricies et vel metus. Aliquam ac lectus finibus, tempor nibh vel, dictum ipsum. Curabitur a magna orci. Integer suscipit, dolor eget facilisis semper, eros velit efficitur odio, a aliquam tortor nibh quis ex. Pellentesque faucibus lacinia elit, vitae consectetur risus lobortis et. Morbi aliquet dui enim, nec suscipit purus egestas sit amet. Vestibulum mauris mauris, cursus vel eros vitae, sodales congue quam. Duis convallis nisi nec cursus semper. Quisque dignissim in odio a imperdiet. </p>
+                              <p>Lelantus is a next-generation privacy protocol developed by Aram Jivanyan at Firo. Lelantus allows you to burn your coins, which hides them in an anonymity set of over 65,000. The receiver can redeem it from this anonymity pool, which breaks the links from your transaction and all the previous ones it has been through.</p>
                           </div>
                           <div class="col">
                               <img src="/img/lelantus.svg" alt=""/>
@@ -103,7 +103,7 @@ permalink: /about/tech/index.html
                       <div class="row">
                           <div class="col">
                               <h3>Dandelion Technology</h3>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quam ex, congue et nunc quis, euismod fringilla nunc. Proin nec augue vel turpis fermentum ultricies et vel metus. Aliquam ac lectus finibus, tempor nibh vel, dictum ipsum. Curabitur a magna orci. Integer suscipit, dolor eget facilisis semper, eros velit efficitur odio, a aliquam tortor nibh quis ex. Pellentesque faucibus lacinia elit, vitae consectetur risus lobortis et. Morbi aliquet dui enim, nec suscipit purus egestas sit amet. Vestibulum mauris mauris, cursus vel eros vitae, sodales congue quam. Duis convallis nisi nec cursus semper. Quisque dignissim in odio a imperdiet. </p>
+                              <p>Dandelion++ protects your IP address. Before Firo transactions are broadcast to the whole network, they’re shuffled between nodes a random number of steps. This way, the origin of the broadcast is decorrelated from your IP address.</p>
                           </div>
                           <div class="col">
                               <img src="/img/dandelion.svg" alt=""/>
@@ -137,7 +137,7 @@ permalink: /about/tech/index.html
                       <div class="row">
                           <div class="col">
                               <h3>Decentralized and fair security</h3>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quam ex, congue et nunc quis, euismod fringilla nunc. Proin nec augue vel turpis fermentum ultricies et vel metus. Aliquam ac lectus finibus, tempor nibh vel, dictum ipsum. Curabitur a magna orci. Integer suscipit, dolor eget facilisis semper, eros velit efficitur odio, a aliquam tortor nibh quis ex. Pellentesque faucibus lacinia elit, vitae consectetur risus lobortis et. Morbi aliquet dui enim, nec suscipit purus egestas sit amet. Vestibulum mauris mauris, cursus vel eros vitae, sodales congue quam. Duis convallis nisi nec cursus semper. Quisque dignissim in odio a imperdiet. </p>
+                              <p>Firo’s Merkle Tree Proof (MTP) mining algorithm further strengthens the practical anonymity of transactions. MTP is memory-intensive, preventing miner centralization. Nodes, however, can bypass this memory requirement. A Zcoin-sponsored audit in 2017 proved the effectiveness of this two-pronged approach.</p>
                           </div>
                           <div class="col">
                               <img src="/img/mtp.svg" alt=""/>
