--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@ permalink: /index.html
              </div>
           </div>
           <div class="row btns">
-             <a class="col" href="/get-firo/download.html">
+             <a class="col" href="/get-firo/download/">
                   <img src="img/wallet.svg" alt="" />
                   <h3>Get a wallet</h3>
              </a>
-             <a class="col" href="/get-firo/buy-firo.html">
+             <a class="col" href="/get-firo/buy-firo/">
                   <img src="img/buy-firo.svg" alt="" />
                   <h3>Buy Firo</h3>
              </a>
