--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ permalink: /index.html
                   <h1>Financial Privacy Renewed.</h1>
                   <p>Firo is a digital currency with a focus on setting privacy standards.</p>
                   <a class="btn-primary" href="#getfiro">Get Firo</a>
-                  <a class="btn-secondary" href="faq.html">Learn more</a>
+                  <a class="btn-secondary" href="/about/faq/">Learn more</a>
               </div>
               <div class="intro-info col imgi">
                   <img src="img/img_firo-mobile-bot2.svg"/>
