--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ permalink: /index.html
                           <h4>Dandelion</h4>
                       </div>
                   </div>
-                  <a class="btn-secondary" href="tech.html">Learn more</a>
+                  <a class="btn-secondary" href="/about/tech/">Learn more</a>
              </div>
           </div>
           </div>
