Fix Sigma text on tech page

--- a/about/tech/index.html
+++ b/about/tech/index.html
@@ -69,7 +69,7 @@ permalink: /about/tech/index.html
                       <div class="row">
                           <div class="col">
                               <h3>Sigma Technology</h3>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quam ex, congue et nunc quis, euismod fringilla nunc. Proin nec augue vel turpis fermentum ultricies et vel metus. Aliquam ac lectus finibus, tempor nibh vel, dictum ipsum. Curabitur a magna orci. Integer suscipit, dolor eget facilisis semper, eros velit efficitur odio, a aliquam tortor nibh quis ex. Pellentesque faucibus lacinia elit, vitae consectetur risus lobortis et. Morbi aliquet dui enim, nec suscipit purus egestas sit amet. Vestibulum mauris mauris, cursus vel eros vitae, sodales congue quam. Duis convallis nisi nec cursus semper. Quisque dignissim in odio a imperdiet. </p>
+                              <p>We believe the whole purpose of blockchain is to build systems that do not require trust, and that same principle applies to our privacy system itself. This is why we built Sigma for Zcoin in 2018. Sigma uses 256 bit ECC curves for proof sizes of just 1.5 kB - a 17x improvement on then-current technology. Sigma was a precursor to Lelantus, and set many stepping stones to get us where we are today.</p>
                           </div>
                           <div class="col">
                               <img src="/img/sigma.svg" alt=""/>
