Add Ajay remove Sandra

--- a/about/team/index.html
+++ b/about/team/index.html
@@ -143,18 +143,6 @@ permalink: /about/team/index.html
                   <div class="col tmember">
                       <div class="row">
                           <div class="col">
-                              <img src="/img/team/sandra.jpg" alt=""/>
-                          </div>
-                          <div class="col">
-                              <h4>Sandra Yap</h4>
-                              <p class="title">Partnerships and Media</p>
-                              <p class="bio">Sandra Yap is in charge of Zcoin's partnerships and media coverage. Sandra has been involved in the entertainment and media industry since 2008 and has both acting and production experience and having played roles on both the big and small screens. She has also served as a brand ambassador for reputable companies such as Speedo and Celcom. Sandra studied Media and Communication at Goldsmiths, University of London and also Acting for Film at the New York Film Academy.</p>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col tmember">
-                      <div class="row">
-                          <div class="col">
                               <img src="/img/team/anwar.jpg" alt=""/>
                           </div>
                           <div class="col">
@@ -167,10 +155,22 @@ permalink: /about/team/index.html
                   <div class="col tmember">
                       <div class="row">
                           <div class="col">
+                              <img src="" alt=""/>
+                          </div>
+                          <div class="col">
+                              <h4>Ajaydono</h4>
+                              <p class="title">Support</p>
+                              <p class="bio">Ajay assists the project steward in day-to-day operations as well as support enquiries.</p>
+                          </div>
+                      </div>
+                  </div>                    
+                  <div class="col tmember">
+                      <div class="row">
+                          <div class="col">
                               <img src="/img/team/michael.jpg" alt=""/>
                           </div>
                           <div class="col">
-                              <h4>Michael ``Muggles`` Bernhardt</h4>
+                              <h4>Michael 'Muggles' Bernhardt</h4>
                               <p class="title">Community Lead</p>
                               <p class="bio">A programmer by trade, he is running his own business to manage water projects via an online portal with installations throughout Africa. Michael has been consumed by crypto since 2013 and has a strong passion for privacy and freedom.</p>
                           </div>
