--- a/about/team/index.html
+++ b/about/team/index.html
@@ -183,8 +183,8 @@ permalink: /about/team/index.html
                           </div>
                           <div class="col">
                               <h4>Sebastian Bausch</h4>
-                              <p class="title">China Liaison</p>
-                              <p class="bio">Sebastian Bausch is a security analyst and has been passionate about cryptocurrencies since 2011. He is the co-founder of Criton Group, a risk consulting firm with focus on Asia. Sebastian studied Mandarin at Xiamen University and holds a postgraduate degree from the University of Nottingham. He is the primary liaison with the Chinese community and the Chinese investors.</p>
+                              <p class="title">Asian Operations</p>
+                              <p class="bio">Sebastian Bausch is a Bangkok-based angel investor and has been passionate about cryptocurrencies since 2011. He studied Mandarin at Xiamen University and holds a postgraduate degree from the University of Nottingham. He supports the team’s operations in the region and coordinates translations and meet-ups.</p>
                           </div>
                       </div>
                   </div>
