Updated Branding page - Added zip files of all badges and logo files into /branding folder - Add absolute links to all zip files - Added alt tags to all images

--- a/branding/index.html
+++ b/branding/index.html
@@ -24,37 +24,37 @@ permalink: /branding/index.html
                         <p>We want our logo to always look clear and legible. Please follow these simple recommendations regarding using the logo. For more details, please <a href="">read our brand guidelines</a>.</p>
                         <div class="row logo-brand">
                               <div class="col og">
-                                  <div class="img-wrap"><img src="/img/firo-logo.svg" alt=""/></div>
+                                  <div class="img-wrap"><img src="/img/firo-logo.svg" alt="Firo logo one white background"/></div>
                                   <p>This is our awesome logo. Use this full-color version on light backgrounds.</p>
                               </div>
                               <div class="col dark">
-                                  <div class="img-wrap"><img src="/img/firo-logo-white-text.svg" alt=""/></div>
+                                  <div class="img-wrap"><img src="/img/firo-logo-white-text.svg" alt="Firo logo on black background"/></div>
                                   <p>On dark backgrounds, use the full-color icon with white text.</p>
                               </div>
                               <div class="col color">
-                                  <div class="img-wrap"><img src="/img/firo-logo-white.svg" alt=""/></div>
+                                  <div class="img-wrap"><img src="/img/firo-logo-white.svg" alt="Firo logo on dark gray background"/></div>
                                   <p>You can also use this all-white logo on dark or colored backgrounds.</p>
                               </div>
                               <div class="col gray">
-                                  <div class="img-wrap"><img src="/img/firo-logo-black.svg" alt=""/></div>
+                                  <div class="img-wrap"><img src="/img/firo-logo-black.svg" alt="Firo logo on light gray background"/></div>
                                   <p>This is our black logo - use it wisely!</p>
                               </div>
                          </div>
                          <div class="row icon-brand">
                               <div class="col og">
-                                  <img src="/img/firo-icon.svg" alt=""/>
+                                  <img src="/img/firo-icon.svg" alt="Firo symbol on white background"/>
                               </div>
                               <div class="col dark">
-                                  <img src="/img/firo-icon.svg" alt=""/>
+                                  <img src="/img/firo-icon.svg" alt="Firo symbol on black background"/>
                               </div>
                               <div class="col color">
-                                  <img src="/img/firo-icon-white.svg" alt=""/>
+                                  <img src="/img/firo-icon-white.svg" alt="Firo symbol on dark gray background"/>
                               </div>
                               <div class="col gray">
-                                  <img src="/img/firo-icon-black.svg" alt=""/>
+                                  <img src="/img/firo-icon-black.svg" alt="Firo symbol on light gray background"/>
                               </div>
                          </div>
-                         <p class="dbtn"><a class="btn-primary" href="">Download logo kit</a></p>
+                         <p class="dbtn"><a class="btn-primary" href="/branding/firo-logo-files.zip">Download logo kit</a></p>
                     </div>
                 </div>
                 <div class="row clearspace">
@@ -83,28 +83,28 @@ permalink: /branding/index.html
               </div>
               <div class="row badges">
                   <div class="col">
-                        <img src="/img/firo-accepted-circle.svg" alt="" />
-                        <a class="btn-secondary" href="">Download kit</a>
+                        <img src="/img/firo-accepted-circle.svg" alt="Firo accepted here circle badge" />
+                        <a class="btn-secondary" href="/branding/firo-accepted-circle-badge.zip">Download kit</a>
                   </div>
                   <div class="col">
-                        <img src="/img/firo-accepted-sq-dark.svg" alt="" />
-                        <a class="btn-secondary" href="">Download kit</a>
+                        <img src="/img/firo-accepted-sq-dark.svg" alt="Firo accepted here rectangle badge" />
+                        <a class="btn-secondary" href="/branding/firo-accepted-badge.zip">Download kit</a>
                   </div>
                   <div class="col">
-                        <img src="/img/firo_badge_accepted_here_right_top_corner.svg" alt="" />
-                        <a class="btn-secondary" href="">Download kit</a>
+                        <img src="/img/firo_badge_accepted_here_right_top_corner.svg" alt="Firo accepted here corner badge" />
+                        <a class="btn-secondary" href="/branding/firo-accepted-corner-badge.zip">Download kit</a>
                   </div>
                   <div class="col">
-                        <img src="/img/firo-donations-accepted-circle.svg" alt="" />
-                        <a class="btn-secondary" href="">Download kit</a>
+                        <img src="/img/firo-donations-accepted-circle.svg" alt="Firo donations accepted here circle badge" />
+                        <a class="btn-secondary" href="/branding/firo-donations-accepted-circle-badge.zip">Download kit</a>
                   </div>
                   <div class="col">
-                        <img src="/img/firo-donations-accepted-sq-dark.svg" alt="" />
-                        <a class="btn-secondary" href="">Download kit</a>
+                        <img src="/img/firo-donations-accepted-sq-dark.svg" alt="Firo donations accepted here rectangle badge" />
+                        <a class="btn-secondary" href="/branding/firo-donations-accepted-badge.zip">Download kit</a>
                   </div>
                   <div class="col">
-                        <img src="/img/firo-donations-accepted-top-right-corner.svg" alt="" />
-                        <a class="btn-secondary" href="">Download kit</a>
+                        <img src="/img/firo-donations-accepted-top-right-corner.svg" alt="Firo donations accepted here corner badge" />
+                        <a class="btn-secondary" href="/branding/firo-donations-accepted-corner-badge.zip">Download kit</a>
                   </div>
               </div>
           </div>
