Add gate.io and placeholder svg

--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -118,6 +118,9 @@ permalink: /get-firo/buy-firo/index.html
                   <div class="col">
                       <a href="https://www.finexbox.com/" target="_blank"><img src="/img/crypto-exchanges/finebox.svg" alt=""/></a>
                   </div>
+				  <div class="col">
+                      <a href="https://www.gate.io/" target="_blank"><img src="/img/crypto-exchanges/PLACEHOLDER.svg" alt=""/></a>
+                  </div>
                   <div class="col">
                       <a href="https://hitbtc.com/" target="_blank"><img src="/img/crypto-exchanges/hitbtc.svg" alt=""/></a>
                   </div>
