Add academic papers

--- a/about/tech/index.html
+++ b/about/tech/index.html
@@ -42,11 +42,11 @@ permalink: /about/tech/index.html
                               <h3>Academic Papers</h3>
                               <div class="row papers">
                                   <div class="col">
-                                      <a href="" alt="" class="paper-title">Lelantus: Private transactions with hidden origins and amounts based on DDH (Aram Jivanyan)</a>
+                                      <a href="https://eprint.iacr.org/2019/373" alt="" class="paper-title">Lelantus: Private transactions with hidden origins and amounts based on DDH (Aram Jivanyan)</a>
                                       <p class="abstract">Lelantus is Zcoin’s next generation privacy protocol which improves on Sigma by removing the requirement of fixed denominations allowing people to burn arbitrary amounts and redeem partial amounts without revealing values or the source. Lelantus doesn’t require any trusted setup and uses only DDH assumptions. It also supports untraceable direct anonymous payments by allowing people to pass the right to redeem to someone else. Lelantus is Zcoin’s own innovation.</p>
                                   </div>
                                   <div class="col">
-                                      <a href="" alt="" class="paper-title">Hierarchical One-out-of-Many Proofs With Applications to Blockchain Privacy and Ring Signatures (Aram Jivanyan)</a>
+                                      <a href="https://eprint.iacr.org/2020/430" alt="" class="paper-title">Hierarchical One-out-of-Many Proofs With Applications to Blockchain Privacy and Ring Signatures (Aram Jivanyan)</a>
                                       <p class="abstract">In this work, we introduce a new method of instantiating one-out-of-many proofs which reduces the proof generation time by an order of magnitude. In certain practical applications our method also helps to fasten the verification process of multiple simultaneously generated proofs. Our approach still results in shorter proofs comprised of only a logarithmic number of commitments and does not compromise the highly efficient batch verification properties endemic to the original construction. We believe this work can also foster further research towards building more efficient one-out-of-many proofs which are extremely useful constructions in the blockchain privacy space and beyond.</p>
                                   </div>
                               </div>
@@ -80,7 +80,7 @@ permalink: /about/tech/index.html
                               <h3>Academic Papers</h3>
                               <div class="row papers">
                                   <div class="col">
-                                      <a href="" alt="" class="paper-title">One-out-of-Many Proofs: Or How to Leak a Secret and Spend a Coin (Jens Groth et al)</a>
+                                      <a href="https://eprint.iacr.org/2014/764.pdf" alt="" class="paper-title">One-out-of-Many Proofs: Or How to Leak a Secret and Spend a Coin (Jens Groth et al)</a>
                                       <p class="abstract">One out of Many Proofs forms the foundation of Sigma which improves on Zerocoin by removing trusted setup and reducing proof sizes. Zcoin is also applying some further efficiency modifications to the original paper. Sigma is in development and is slated to be released in Q1 2019.</p>
                                   </div>
                               </div>
@@ -114,7 +114,7 @@ permalink: /about/tech/index.html
                               <h3>Academic Papers</h3>
                               <div class="row papers">
                                   <div class="col">
-                                      <a href="" alt="" class="paper-title">Dandelion++ Lightweight Cryptocurrency Networking with Formal Anonymity Guarantees (Giula Fanti et al)</a>
+                                      <a href="https://arxiv.org/pdf/1805.11060.pdf" alt="" class="paper-title">Dandelion++ Lightweight Cryptocurrency Networking with Formal Anonymity Guarantees (Giula Fanti et al)</a>
                                       <p class="abstract">Dandelion++ was originally developed for Bitcoin as a way to obscure the origin of transactions by changing the way transactions propagate through the network. Dandelion++ is slated to go live on Bitcoin Core 0.18. Zcoin was the first project to go live with Dandelion++ on mainnet in September 2018.</p>
                                   </div>
                               </div>
@@ -148,7 +148,7 @@ permalink: /about/tech/index.html
                               <h3>Academic Papers</h3>
                               <div class="row papers">
                                   <div class="col">
-                                      <a href="" alt="" class="paper-title">MTP: Egalitarian Computing (Alex Biryukov, Dmitry Khovratovich) (revision and improvement funded by Zcoin)</a>
+                                      <a href="https://arxiv.org/pdf/1606.03588.pdf" alt="" class="paper-title">MTP: Egalitarian Computing (Alex Biryukov, Dmitry Khovratovich) (revision and improvement funded by Zcoin)</a>
                                       <p class="abstract">MTP is the Proof of Work algorithm that Zcoin uses that promotes egalitarian mining while maintaining quick verification. The original paper had <a href="https://eprint.iacr.org/2017/497.pdf" target="_blank">flaws as identified by Dinur and Nadler</a>. Zcoin organized a bounty to harden MTP and also funded research to solve these issues as reflected in the linked paper. MTP was coded from the ground up by Zcoin and switched to the MTP algorithm in December 2018.</p>
                                   </div>
                               </div>
