--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -35,9 +35,9 @@ permalink: /get-firo/download/index.html
                         <div class="inner">
                             <h3>QT Wallet</h3>
                             <p class="wversion">v0.14.0.5</p>
-                            <p class="changelog"><a href="" target="_blank">View changelog</a></p>
+                            <p class="changelog"><a href="https://github.com/firoorg/firo/releases/latest" target="_blank">View changelog</a></p>
                             <div class="system win">
-                                <a href="">Download QT for Windows</a>
+                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.0.5/zcoin-0.14.0.5-win64-setup.exe">Download QT for Windows</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh1">
                                     <label class="tab-label" for="wh1">Show SHA256 hashes for Windows</label>
@@ -47,7 +47,7 @@ permalink: /get-firo/download/index.html
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="">Download QT for MacOS</a>
+                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.0.5/zcoin-0.14.0.5-macos.dmg">Download QT for MacOS</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh1">
                                     <label class="tab-label" for="mh1">Show SHA256 hashes for MacOS</label>
@@ -57,7 +57,7 @@ permalink: /get-firo/download/index.html
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="">Download QT for Linux</a>
+                                <a href="https://github.com/firoorg/firo/releases/download/v0.14.0.5/zcoin-0.14.0.5-linux64.tar.gz">Download QT for Linux</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh1">
                                     <label class="tab-label" for="lh1">Show SHA256 hashes for Linux</label>
@@ -67,8 +67,8 @@ permalink: /get-firo/download/index.html
                               </div>
                             </div>
                             <div class="source">
-                                <a href="" target="_blank"><i class="icon-github"></i></a>
-                                <a href="" target="_blank"><i class="icon-sourceforge"></i></a>
+                                <a href="https://github.com/firoorg/firo" target="_blank"><i class="icon-github"></i></a>
+                                <a href="https://sourceforge.net/projects/zcoin/" target="_blank"><i class="icon-sourceforge"></i></a>
                             </div>
                         </div>
                     </div>
@@ -78,39 +78,39 @@ permalink: /get-firo/download/index.html
                         <div class="inner">
                             <h3>Electron</h3>
                             <p class="wversion">1.1.3</p>
-                            <p class="changelog"><a href="" target="_blank">View changelog</a></p>
+                            <p class="changelog"><a href="https://github.com/firoorg/firo-client/releases/latest" target="_blank">View changelog</a></p>
                             <div class="system win">
-                                <a href="">Download Electron for Windows</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/1.1.3/Zcoin.Client-1.1.3.exe">Download Electron for Windows</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh3">
                                     <label class="tab-label" for="wh3">Show SHA256 hashes for Windows</label>
                                     <div class="tab-content">
-                                      <p>d7c6d8657613326100da391a8dd47bded6df00aa66ab20412c88a5ed67d051ff</p>
+                                      <p>bd4ed82f0eea8d113eb2891586e70ab7c2f6046d4a6dcb0427e2f837e77892fd</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="">Download Electron for MacOS</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/1.1.3/Zcoin.Client-1.1.3.dmg">Download Electron for MacOS</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh2">
                                     <label class="tab-label" for="mh2">Show SHA256 hashes for MacOS</label>
                                     <div class="tab-content">
-                                      <p>45800d5b7686e86ab5e42114d74a79b589e7ff8630aebcd1866150adca6eed06</p>
+                                      <p>fd9477089fdc51458ef3917c090cab910750679efaaa5e5f158f955cdecdfecf</p>
                                     </div>
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="">Download Electron for Linux</a>
+                                <a href="https://github.com/firoorg/firo-client/releases/download/1.1.3/Zcoin.Client-1.1.3.AppImage">Download Electron for Linux</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh2">
                                     <label class="tab-label" for="lh2">Show SHA256 hashes for Linux</label>
                                     <div class="tab-content">
-                                      <p>9127e89178a4d4d84b299e90cc4f024ca3bae3283233ef63f4c097d7a8cd6bba</p>
+                                      <p>79db57ec023f580e5105b227c92e1c2906dc400b00d3ee7e70c854f24671f85f</p>
                                     </div>
                               </div>
                             </div>
                             <div class="source">
-                                <a href="" target="_blank"><i class="icon-github"></i></a>
+                                <a href="https://github.com/firoorg/firo-client" target="_blank"><i class="icon-github"></i></a>
                                 <a href="" target="_blank"><i class="icon-sourceforge"></i></a>
                             </div>
                     </div>
@@ -121,39 +121,39 @@ permalink: /get-firo/download/index.html
                         <div class="inner">
                             <h3>Electrum</h3>
                             <p class="wversion">3.3.8</p>
-                            <p class="changelog"><a href="" target="_blank">View changelog</a></p>
+                            <p class="changelog"><a href="https://github.com/firoorg/electrum-xzc/releases/latest" target="_blank">View changelog</a></p>
                             <div class="system win">
-                                <a href="">Download Electrum for Windows</a>
+                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a7/electrum-xzc-3.3.8a7-setup.exe">Download Electrum for Windows</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh5">
                                     <label class="tab-label" for="wh5">Show SHA256 hashes for Windows</label>
                                     <div class="tab-content">
-                                      <p>d7c6d8657613326100da391a8dd47bded6df00aa66ab20412c88a5ed67d051ff</p>
+                                      <p>62be7e1ee86a667f2e625addabd218619728792e547d681c61b7ac8685ffc174</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="">Download Electrum for MacOS</a>
+                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a7/electrum-3.3.8a7.dmg">Download Electrum for MacOS</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh3">
                                     <label class="tab-label" for="mh3">Show SHA256 hashes for MacOS</label>
                                     <div class="tab-content">
-                                      <p>45800d5b7686e86ab5e42114d74a79b589e7ff8630aebcd1866150adca6eed06</p>
+                                      <p>a858e27e576e90276af74b21c8d1cfac03ae988e2be817c33e9b427f19fe6ce4</p>
                                     </div>
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="">Download Electrum for Linux</a>
+                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a7/electrum_xzc-3.3.8a7-x86_64.AppImage">Download Electrum for Linux</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh3">
                                     <label class="tab-label" for="lh3">Show SHA256 hashes for Linux</label>
                                     <div class="tab-content">
-                                      <p>9127e89178a4d4d84b299e90cc4f024ca3bae3283233ef63f4c097d7a8cd6bba</p>
+                                      <p>b6bcfd501e516352dd6902f9b3bf4ddd7b6f15c2e99345bbea9f44a441ef6255</p>
                                     </div>
                               </div>
                             </div>
                             <div class="source">
-                                <a href="" target="_blank"><i class="icon-github"></i></a>
+                                <a href="https://github.com/firoorg/electrum-xzc" target="_blank"><i class="icon-github"></i></a>
                                 <a href="" target="_blank"><i class="icon-sourceforge"></i></a>
                             </div>
                     </div>
