Massive link correction

--- a/community/index.html
+++ b/community/index.html
@@ -22,11 +22,11 @@ permalink: /community/index.html
                         <img src="/img/site-icons/com_forum.svg" alt=""/>
                         <p>Forum</p>
                   </a>
-                  <a href="https://www.youtube.com/c/zcoin" target="_blank" class="col">
+                  <a href="https://www.youtube.com/c/firoorg" target="_blank" class="col">
                         <img src="/img/site-icons/com_youtube.svg" alt=""/>
                         <p>Youtube</p>
                   </a>
-                  <a href="https://telegram.me/zcoinproject" target="_blank" class="col">
+                  <a href="https://t.me/firoproject" target="_blank" class="col">
                         <img src="/img/site-icons/com_telegram.svg" alt=""/>
                         <p>Telegram</p>
                   </a>
@@ -42,11 +42,11 @@ permalink: /community/index.html
                   </div>
               </div>
               <div class="row other-channels">
-                  <a href="https://twitter.com/zcoinofficial" target="_blank" class="col">
+                  <a href="https://twitter.com/firoorg" target="_blank" class="col">
                         <img src="/img/site-icons/com_twitter.svg" alt=""/>
                         <p>Twitter</p>
                   </a>
-                  <a href="https://www.facebook.com/zcoinofficial/" target="_blank" class="col">
+                  <a href="https://www.facebook.com/firoorg/" target="_blank" class="col">
                         <img src="/img/site-icons/com_facebook.svg" alt=""/>
                         <p>Facebook</p>
                   </a>
