--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -166,7 +166,7 @@ permalink: /get-firo/download/index.html
             <div class="container">
               <div class="row">
                   <div class="col head">
-                        <h2>mobile wallets</h2>
+                        <h2>wallets</h2>
                   </div>
               </div>
               <div class="row mob-wallets">
@@ -175,13 +175,18 @@ permalink: /get-firo/download/index.html
                               <h4>ZelCore Wallet</h4>
                               <ul class="row">
                                  <li class="col">
-                                    <a href="https://zeltrez.io/#download" target="_blank">
+                                    <a href="https://play.google.com/store/apps/details?id=com.zelcash.zelcore" target="_blank">
                                          <i class="icon-android"></i>
                                     </a>
                                  </li>
                                   <li class="col">
                                      <a href="https://itunes.apple.com/us/app/zelcore/id1436296839?mt=8" target="_blank">
                                           <i class="icon-apple"></i>
+                                      </a>
+                                 </li>
+                                 <li class="col">
+                                     <a href="https://zeltrez.io/#download" target="_blank">
+                                          <i class="icon-desktop"></i>
                                       </a>
                                  </li>
                               </ul>
