--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@ permalink: /index.html
                   <h3>Buy Firo</h3>
              </a>
              
-             <a class="col" href="#">
+             <a class="col" href="/guide/masternode-setup.html">
                   <img src="img/earn-firo.svg" alt="" />
                   <h3>Earn Firo</h3>
              </a>
              
-             <a class="col" href="#">
+             <a class="col" href="/guide/how-to-mine.html">
                   <img src="img/mine-firo.svg" alt="" />
                   <h3>Start mining</h3>
              </a>
