Fix Zelcore desktop wallet link

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -185,7 +185,7 @@ permalink: /get-firo/download/index.html
                                       </a>
                                  </li>
                                  <li class="col">
-                                     <a href="https://zeltrez.io/#download" target="_blank">
+                                     <a href="https://zel.network/zelcore" target="_blank">
                                           <i class="icon-desktop"></i>
                                       </a>
                                  </li>
