update forum url

--- a/community/index.html
+++ b/community/index.html
@@ -18,7 +18,7 @@ permalink: /community/index.html
                         <img src="/img/site-icons/com_discord.svg" alt=""/>
                         <p>Discord</p>
                   </a>
-                  <a href="https://forum.zcoin.io/" target="_blank" class="col">
+                  <a href="https://forum.firo.org/" target="_blank" class="col">
                         <img src="/img/site-icons/com_forum.svg" alt=""/>
                         <p>Forum</p>
                   </a>
