--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -120,10 +120,10 @@ permalink: /get-firo/download/index.html
                         <p class="tagline">The fast, lightweight option</p>
                         <div class="inner">
                             <h3>Electrum</h3>
-                            <p class="wversion">3.3.8</p>
+                            <p class="wversion">3.3.8a8</p>
                             <p class="changelog"><a href="https://github.com/firoorg/electrum-xzc/releases/latest" target="_blank">View changelog</a></p>
                             <div class="system win">
-                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a7/electrum-xzc-3.3.8a7-setup.exe">Download Electrum for Windows</a>
+                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a8/electrum-xzc-3.3.8a8-setup.exe">Download Electrum for Windows</a>
                                 <div class="tab">
                                     <input type="checkbox" id="wh5">
                                     <label class="tab-label" for="wh5">Show SHA256 hashes for Windows</label>
@@ -133,7 +133,7 @@ permalink: /get-firo/download/index.html
                                 </div>
                             </div>
                             <div class="system mac">
-                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a7/electrum-3.3.8a7.dmg">Download Electrum for MacOS</a>
+                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a8/electrum-3.3.8a8.dmg">Download Electrum for MacOS</a>
                                 <div class="tab">
                                     <input type="checkbox" id="mh3">
                                     <label class="tab-label" for="mh3">Show SHA256 hashes for MacOS</label>
@@ -143,7 +143,7 @@ permalink: /get-firo/download/index.html
                               </div>
                             </div>
                             <div class="system linux">
-                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a7/electrum_xzc-3.3.8a7-x86_64.AppImage">Download Electrum for Linux</a>
+                                <a href="https://github.com/firoorg/electrum-xzc/releases/download/3.3.8a8/electrum_xzc-3.3.8a8-x86_64.AppImage">Download Electrum for Linux</a>
                                 <div class="tab">
                                     <input type="checkbox" id="lh3">
                                     <label class="tab-label" for="lh3">Show SHA256 hashes for Linux</label>
