--- a/about/tech/index.html
+++ b/about/tech/index.html
@@ -43,7 +43,7 @@ permalink: /about/tech/index.html
                               <div class="row papers">
                                   <div class="col">
                                       <a href="https://eprint.iacr.org/2019/373" alt="" class="paper-title">Lelantus: Private transactions with hidden origins and amounts based on DDH (Aram Jivanyan)</a>
-                                      <p class="abstract">Lelantus is Zcoin’s next generation privacy protocol which improves on Sigma by removing the requirement of fixed denominations allowing people to burn arbitrary amounts and redeem partial amounts without revealing values or the source. Lelantus doesn’t require any trusted setup and uses only DDH assumptions. It also supports untraceable direct anonymous payments by allowing people to pass the right to redeem to someone else. Lelantus is Zcoin’s own innovation.</p>
+                                      <p class="abstract">Lelantus is Firo’s next generation privacy protocol which improves on Sigma by removing the requirement of fixed denominations allowing people to burn arbitrary amounts and redeem partial amounts without revealing values or the source. Lelantus doesn’t require any trusted setup and uses only DDH assumptions. It also supports untraceable direct anonymous payments by allowing people to pass the right to redeem to someone else. Lelantus is Firo’s own innovation.</p>
                                   </div>
                                   <div class="col">
                                       <a href="https://eprint.iacr.org/2020/430" alt="" class="paper-title">Hierarchical One-out-of-Many Proofs With Applications to Blockchain Privacy and Ring Signatures (Aram Jivanyan)</a>
@@ -69,7 +69,7 @@ permalink: /about/tech/index.html
                       <div class="row">
                           <div class="col">
                               <h3>Sigma Technology</h3>
-                              <p>We believe the whole purpose of blockchain is to build systems that do not require trust, and that same principle applies to our privacy system itself. This is why we built Sigma for Zcoin in 2018. Sigma uses 256 bit ECC curves for proof sizes of just 1.5 kB - a 17x improvement on then-current technology. Sigma was a precursor to Lelantus, and set many stepping stones to get us where we are today.</p>
+                              <p>We believe the whole purpose of blockchain is to build systems that do not require trust, and that same principle applies to our privacy system itself. This is why we built Sigma for Firo in 2018. Sigma uses 256 bit ECC curves for proof sizes of just 1.5 kB - a 17x improvement on then-current technology. Sigma was a precursor to Lelantus, and set many stepping stones to get us where we are today.</p>
                           </div>
                           <div class="col">
                               <img src="/img/sigma.svg" alt=""/>
@@ -81,7 +81,7 @@ permalink: /about/tech/index.html
                               <div class="row papers">
                                   <div class="col">
                                       <a href="https://eprint.iacr.org/2014/764.pdf" alt="" class="paper-title">One-out-of-Many Proofs: Or How to Leak a Secret and Spend a Coin (Jens Groth et al)</a>
-                                      <p class="abstract">One out of Many Proofs forms the foundation of Sigma which improves on Zerocoin by removing trusted setup and reducing proof sizes. Zcoin is also applying some further efficiency modifications to the original paper. Sigma is in development and is slated to be released in Q1 2019.</p>
+                                      <p class="abstract">One out of Many Proofs forms the foundation of Sigma which improves on Zerocoin by removing trusted setup and reducing proof sizes. Firo is also applying some further efficiency modifications to the original paper. Sigma is in development and is slated to be released in Q1 2019.</p>
                                   </div>
                               </div>
                           </div>
@@ -115,7 +115,7 @@ permalink: /about/tech/index.html
                               <div class="row papers">
                                   <div class="col">
                                       <a href="https://arxiv.org/pdf/1805.11060.pdf" alt="" class="paper-title">Dandelion++ Lightweight Cryptocurrency Networking with Formal Anonymity Guarantees (Giula Fanti et al)</a>
-                                      <p class="abstract">Dandelion++ was originally developed for Bitcoin as a way to obscure the origin of transactions by changing the way transactions propagate through the network. Dandelion++ is slated to go live on Bitcoin Core 0.18. Zcoin was the first project to go live with Dandelion++ on mainnet in September 2018.</p>
+                                      <p class="abstract">Dandelion++ was originally developed for Bitcoin as a way to obscure the origin of transactions by changing the way transactions propagate through the network. Dandelion++ is slated to go live on Bitcoin Core 0.18. Firo was the first project to go live with Dandelion++ on mainnet in September 2018.</p>
                                   </div>
                               </div>
                           </div>
@@ -137,7 +137,7 @@ permalink: /about/tech/index.html
                       <div class="row">
                           <div class="col">
                               <h3>Decentralized and fair security</h3>
-                              <p>Firo’s Merkle Tree Proof (MTP) mining algorithm further strengthens the practical anonymity of transactions. MTP is memory-intensive, preventing miner centralization. Nodes, however, can bypass this memory requirement. A Zcoin-sponsored audit in 2017 proved the effectiveness of this two-pronged approach.</p>
+                              <p>Firo’s Merkle Tree Proof (MTP) mining algorithm further strengthens the practical anonymity of transactions. MTP is memory-intensive, preventing miner centralization. Nodes, however, can bypass this memory requirement. A Firo-sponsored audit in 2017 proved the effectiveness of this two-pronged approach.</p>
                           </div>
                           <div class="col">
                               <img src="/img/mtp.svg" alt=""/>
@@ -148,8 +148,8 @@ permalink: /about/tech/index.html
                               <h3>Academic Papers</h3>
                               <div class="row papers">
                                   <div class="col">
-                                      <a href="https://arxiv.org/pdf/1606.03588.pdf" alt="" class="paper-title">MTP: Egalitarian Computing (Alex Biryukov, Dmitry Khovratovich) (revision and improvement funded by Zcoin)</a>
-                                      <p class="abstract">MTP is the Proof of Work algorithm that Zcoin uses that promotes egalitarian mining while maintaining quick verification. The original paper had <a href="https://eprint.iacr.org/2017/497.pdf" target="_blank">flaws as identified by Dinur and Nadler</a>. Zcoin organized a bounty to harden MTP and also funded research to solve these issues as reflected in the linked paper. MTP was coded from the ground up by Zcoin and switched to the MTP algorithm in December 2018.</p>
+                                      <a href="https://arxiv.org/pdf/1606.03588.pdf" alt="" class="paper-title">MTP: Egalitarian Computing (Alex Biryukov, Dmitry Khovratovich) (revision and improvement funded by Firo)</a>
+                                      <p class="abstract">MTP is the Proof of Work algorithm that Firo uses that promotes egalitarian mining while maintaining quick verification. The original paper had <a href="https://eprint.iacr.org/2017/497.pdf" target="_blank">flaws as identified by Dinur and Nadler</a>. Firo organized a bounty to harden MTP and also funded research to solve these issues as reflected in the linked paper. MTP was coded from the ground up by Firo and switched to the MTP algorithm in December 2018.</p>
                                   </div>
                               </div>
                           </div>
